Fixes search button going off screen on mobile

--- a/resources/assets/less/responsive.less
+++ b/resources/assets/less/responsive.less
@@ -107,5 +107,9 @@
   .search-input {
     width: 100%;
   }
+  .roomCodeSearch {
+    font-size: 1.5rem;
+    margin: 1rem 0 0 1rem;
+  }
 
 }
