--- a/resources/assets/less/room.less
+++ b/resources/assets/less/room.less
@@ -12,3 +12,8 @@
   color: #ffffff;
   margin: 1rem 0 0 1rem;
 }
+
+.roomCodeSearch {
+  font-size: .85rem;
+  margin: .5rem 0 0 .5rem;
+}
