--- a/resources/assets/less/search.less
+++ b/resources/assets/less/search.less
@@ -1,7 +1,7 @@
 //Search
 .search-section {
   display: flex;
-  max-width: 80%;
+  max-width: 90%;
 }
 
 .search-input-wrapper {
@@ -13,6 +13,7 @@
   background: none;
   border-bottom: 2px solid #ffffff;
   color: #ffffff;
+  width: 75%;
 }
 
 .search-button {
@@ -22,6 +23,8 @@
   margin: 0 .5rem 0 0;
   cursor: pointer;
   transition: all 1s ease-in-out;
+  width: 25%;
+
 }
 
 .search-button:hover {
